# TradegentSwarm

./: .env.template  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  =2.2.1  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  db_layer.py  docker-compose.yml  nexus-light.service  orchestrator.py  pyproject.toml  service.py  setup.sh  tradegent_swarm.code-workspace
tradegent_ui/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tradegent_ui/agent/: __init__.py  adk_bridge.py  analysis_agent.py  base_agent.py  context_manager.py  coordinator.py  intent_classifier.py  llm_client.py  mcp_client.py  portfolio_agent.py  research_agent.py  stdio_mcp.py  tool_mappings.py  trade_agent.py
tradegent_ui/db/: schema.sql
tradegent_ui/docs/: AUTH0_MULTIUSER_PLAN.md  UI_FEATURES.md
tradegent_ui/frontend/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  prettier.config.js  server.js  tailwind.config.js  vitest.config.ts
tradegent_ui/frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
tradegent_ui/frontend/components/: a2ui-renderer.tsx  analysis-detail-view.tsx  bracket-order-form.tsx  chat-panel.tsx  connection-status.tsx  daily-summary.tsx  dashboard-layout.tsx  equity-curve.tsx  error-boundary.tsx  graph-viewer.tsx  header.tsx  live-pnl.tsx  live-ticker.tsx  main-layout.tsx  market-status.tsx  notification-center.tsx  open-orders.tsx  portfolio-heatmap.tsx  position-sizer.tsx  providers.tsx  schedule-manager.tsx  service-health.tsx  sidebar.tsx  tradegent-components.tsx  trading-controls.tsx  user-menu.tsx  websocket-status.tsx  widget-manager.tsx  win-rate-dashboard.tsx
tradegent_ui/frontend/e2e/: auth.spec.ts  chat.spec.ts  dashboard.spec.ts  navigation.spec.ts
tradegent_ui/frontend/hooks/: use-chat.ts  use-dashboard.ts  use-keyboard-shortcuts.ts  use-local-storage.ts  use-media-query.ts  use-order-stream.ts  use-portfolio-stream.ts  use-price-stream.ts  use-queries.ts  use-websocket.ts
tradegent_ui/frontend/lib/: analysis-transformer.ts  api.ts  auth.ts  logger.ts  messages.ts  mock-analysis-detail.ts  mock-data.ts  query-client.ts  unified-client.ts  utils.ts  websocket-auth.ts  websocket.ts
tradegent_ui/frontend/playwright-report/: index.html
tradegent_ui/frontend/stores/: chat-store.ts  session-store.ts  ui-store.ts
tradegent_ui/frontend/tests/: setup.ts
tradegent_ui/frontend/types/: a2ui.ts  analysis.ts  api.ts  auth.ts  graph.ts  index.ts  next-auth.d.ts  recharts.ts
tradegent_ui/schemas/: a2ui_schema.json
tradegent_ui/server/: __init__.py  analyses.py  audit.py  auth.py  config.py  dashboard.py  database.py  errors.py  logging.py  main.py  messages.py  rate_limit.py  response.py  task_manager.py
tradegent_ui/server/repositories/: __init__.py  admin_repository.py  alerts_repository.py  analytics_repository.py  auth_repository.py  automation_repository.py  (+8 more)
tradegent_ui/static/: index.html
tradegent_ui/tests/: __init__.py  test_adk_bridge_and_execution.py  test_admin_route_integration.py  test_admin_service.py  test_alerts_route_integration.py  test_alerts_service.py  test_analyses_normalization_regressions.py  test_analytics_route_integration.py  test_analytics_service.py  test_auth_route_integration.py  test_auth_service.py  test_automation_route_integration.py  test_automation_service.py  test_chat_logging_integration.py  test_dashboard_analysis_quality_regressions.py  test_intent_classifier.py  test_notifications_route_integration.py  test_notifications_service.py  test_scanners_route_integration.py  test_scanners_service.py  test_schedules_route_integration.py  test_schedules_service.py  test_security_hardening.py  test_sessions_repository.py  test_sessions_route_integration.py  test_sessions_service.py  test_settings_route_integration.py  test_settings_service.py  test_trades_route_integration.py  test_trades_service.py  test_users_route_integration.py  test_users_service.py  test_watchlist_route_integration.py  test_watchlist_service.py  test_ws_agent_integration.py
(+610 files in other folders)
